# pyls

./: .gitignore  README.md  pyls.py  pyproject.toml
pyls/: __main__.py  pyls.py
pyls/Structure/: Structure.json
testcases/: test_pyls.py
